create github pages

--- a/page1.html
+++ b/page1.html
@@ -34,11 +34,8 @@
                     <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                 </a>
             </span>
-            <span class="navbar-caption-wrap">
-                <a class="navbar-caption text-white display-5" href="https://mobirise.com">
-                    StoreM4
-                </a>
-            </span>
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">
+                    Store</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -468,7 +465,7 @@
                         <div data-form-alert="" hidden="">
                             Thanks for filling out the form!
                         </div>
-                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="rzsULHra3d9e9fQi7f8U4ZdnXkS3pUF3FXi5y1d3SIZ2h2V4nZs8Av0Sah2ASoPemTMbRaoL0xvusPBHiO/46FwVZ9o8NiwQsITlVJYLRVSgj5eiA/ELpaGF9CSPgfW9">
+                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="wBMX7LCu5odiDeFxO8sJ0KWiQYpT9gxDmadA4I05Ml5zINE0vIkcQU8H2VcRHEofa+LgNLE/WIif8DdLqxc96977PYvAROmuJtMW5lby3JTG14S/y3H8Iwjsn4gzvwL+">
                             <div class="input-wrap" data-for="email">
                                 <input type="text" class="field special-form display-7" name="email" data-form-field="E-mail" required="" id="email-footer3-f">
                             </div>
