--- a/page2.html
+++ b/page2.html
@@ -34,11 +34,8 @@
                     <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                 </a>
             </span>
-            <span class="navbar-caption-wrap">
-                <a class="navbar-caption text-white display-5" href="https://mobirise.com">
-                    StoreM4
-                </a>
-            </span>
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">
+                    Store</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -279,7 +276,7 @@
                         <div data-form-alert="" hidden="">
                             Thanks for filling out the form!
                         </div>
-                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="d7WoA8F8xAeenyIAuXFt6RxpUxwrS/g/GysrkhkyH96uG+kUBQ/I2tfDgz2/5YRV+tlOQeGxMV1AgTKhjC7UHRyLOExRs6DIDo8f5PHzVA523jgxtCKyYYpqrrzRTI6W">
+                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="0+Wh/Paz5EScGL7EmOUQhOLEv48HTGkCvxJ9i1eesO/az/W/RUNkU5NDwjR7LYP2ywBGbZ2xHjGws0Ku707R8iY00mNb2AM54AK94Fi8HM1InEdglZsk/N8Z7vVc5BWP">
                             <div class="input-wrap" data-for="email">
                                 <input type="text" class="field special-form display-7" name="email" data-form-field="E-mail" required="" id="email-footer3-k">
                             </div>
