--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
                     <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                 </a>
             </span>
-            <span class="navbar-caption-wrap">
-                <a class="navbar-caption text-white display-5" href="https://mobirise.com">
-                    StoreM4
-                </a>
-            </span>
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">
+                    Store</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -254,7 +251,7 @@
                         <div data-form-alert="" hidden="">
                             Thanks for filling out the form!
                         </div>
-                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="nBymVdOoTSUPL37ftFTI3WFy2Xd1SQo1aje4EEEqLCMbpa7YAHgAVFrGcpFvlXrx5L/tnY4ihHh1WajfXcKQFJf1Za0rqO8doV5JMe6VS2rFNRvJz5i9+XKiwWjVOZXo">
+                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="MnefRMt3TsTgTr2uOEM4hgp1sUmVklDEaifwHRLQIapIh6T6ZnwAWrVVzKWYPGezJlyfrcdumbxKaHPEr5gVyTc0ZABc5+JNxSimO3nT71W24yy85Drxam6Kn1zbBVrm">
                             <div class="input-wrap" data-for="email">
                                 <input type="text" class="field special-form display-7" name="email" data-form-field="E-mail" required="" id="email-footer3-d">
                             </div>
