--- a/page3.html
+++ b/page3.html
@@ -34,11 +34,8 @@
                     <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                 </a>
             </span>
-            <span class="navbar-caption-wrap">
-                <a class="navbar-caption text-white display-5" href="https://mobirise.com">
-                    StoreM4
-                </a>
-            </span>
+            <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">
+                    Store</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -96,7 +93,7 @@
                 </h1>
                 <div data-form-alert="" hidden="">Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="XJBDyA45/2f1QF3r1feB0NlWURy03GC/mJqMVrcdrc+VicJTeHDvHw1eBz7YK5GSQQC9f8ieiXsb/sOF5HQEcuJrUxEcP1G6+unCatP4F+o1F1lMVci2fepYkl+fFOts">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="S5zyT9Fe++qlPrHQnBnAjOYEtOnLCImK5+GzTGr8wYmY3KXcdLVoAZTmDF7+99ncUGEBeQ+86bNFSSlbEzjqnO/5b1bGOTAkefcM2E+SVTtUQjQS+OhBvAjz1UEQ0CVQ">
                     <div class="row input-main">
                         <div class="col-md-5 col-lg-4 input-wrap" data-for="firstname">
                             <label class="form-label-outside" for="form-1-firstname">First Name</label>
@@ -222,7 +219,7 @@
                         <div data-form-alert="" hidden="">
                             Thanks for filling out the form!
                         </div>
-                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="WA0oBTtRWSYL7+OFnj0BQ2Fkt0zwmbSA6XLBY9StoX+XQ8GKOn9e7HKoISjkMzwpDcESYUWZDHiAMfDxTqv/gupBp5XovIhMPn3TlPh4DBLDa2rKFesrextD37gUK1A=">
+                        <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" data-form-email="true" value="75Pfvj8qcG5v0KkwIQRUmGP1r6ohc/7sZVLcJ2soncItE9VK+EeApiXTtt1VwuWjP736Uje12qanWyX1oxyTMsT6eQy3PB30k8f01B7fQGJkxe05CmAgZYshy8CjtOhG">
                             <div class="input-wrap" data-for="email">
                                 <input type="text" class="field special-form display-7" name="email" data-form-field="E-mail" required="" id="email-footer3-n">
                             </div>
